--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a>
-    <a href="./recipes/pudding.html" target="_blank" rel="noopener noreferrer">Pudding</a>
-    <a href="./recipes/soup.html" target="_blank" rel="noopener noreferrer">Soup</a>
+    <p><a href="./recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></p>
+    <p><a href="./recipes/pudding.html" target="_blank" rel="noopener noreferrer">Pudding</a></p>
+    <p><a href="./recipes/soup.html" target="_blank" rel="noopener noreferrer">Soup</a></p>
 </body>
 </html>
