--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../lasagna.jpg"
-        <h2>Description</h2>
+    <img src="../lasagna.jpg">
+
+    <h2>Description</h2>
         <p>Lasagna is one of the most delicious dishes in the world. To make lasagna, you'll follow these instructions.</p>
         <h2>Ingredients</h2>
         <ul>
