--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <p><a href="./recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></p>
-    <p><a href="./recipes/pudding.html" target="_blank" rel="noopener noreferrer">Pudding</a></p>
-    <p><a href="./recipes/soup.html" target="_blank" rel="noopener noreferrer">Soup</a></p>
+    <h1 class="title">Odin Recipes</h1>
+    <p class="recipes" id="link-one"><a href="./recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></p>
+    <p class="recipes" id="link-two"><a href="./recipes/pudding.html" target="_blank" rel="noopener noreferrer">Pudding</a></p>
+    <p class="recipes" id="link-three"><a href="./recipes/soup.html" target="_blank" rel="noopener noreferrer">Soup</a></p>
 </body>
 </html>
